feat: add manifest automation and curated skill entries
Add manifest:add and manifest:check commands, enforce coverage in CI, and update docs for the new flow.

Register curated skills (imagegen, notion-knowledge-capture, notion-meeting-intelligence, pdf, spreadsheet) and regenerate stable catalog entries for v0.1.1 release URLs.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,4 +19,4 @@ jobs:
           node-version: "20"
 
       - name: Validate manifest and skill folders
-        run: node scripts/build-catalog.mjs --validate-only
+        run: npm run manifest:check
